# greentic-types

./: CHANGELOG.md  Cargo.toml  DESIGN_MANIFESTO.md  GREENTIC_OVERVIEW.md  GREENTIC_PACK_FLOW_COMPONENT_V1_SPEC.md  GREENTIC_PACK_SUMMARY.md  LICENSE  MIGRATION_STATUS.md  MODELS.md  README.md  SCHEMAS.md
.codex/: PR-01-WIT.md  PR-01-envelope-from-to.md  PR-02-WIT.md  PR-15.md  repo_overview.md
.codex/done/: GT-PR-01.md  GT-PR-02.md  PR-0-6.md  PR-01.md  TypesValPR-02.md
.github/workflows/: auto-tag.yml  ci.yml  pages.yml  publish.yml
ci/: local_check.sh
docs/: ARCHITECTURE_CONTEXT.md  DISCOVERY_MESSAGING_CANONICAL.md  pack_manifest_extensions.md  provider_extension_ground_truth.md  worker.md
examples/: gen_wit_fixtures.rs
fixtures/component/: qa_default_v0_6_0.cbor
fixtures/legacy/: component_v0_5_0_qa.json
fixtures/pack/: describe_v0_6_0.cbor  qa_setup_v0_6_0.cbor
greentic-types-macros/: Cargo.toml
greentic-types-macros/src/: lib.rs
scripts/: check_schema_ids.sh  deny_dupes.sh  version-tools.sh
src/: bindings.rs  capabilities.rs  cbor.rs  cbor_bytes.rs  component.rs  component_source.rs  context.rs  deployment.rs  distributor.rs  envelope.rs  error.rs  events.rs  events_provider.rs  flow.rs  flow_resolve.rs  flow_resolve_summary.rs  i18n.rs  lib.rs  messaging.rs  op_descriptor.rs  outcome.rs  pack.rs  pack_manifest.rs  pack_spec.rs  policy.rs  provider.rs  provider_install.rs  qa.rs  run.rs  schema.rs  schema_id.rs  schema_registry.rs  secrets.rs  session.rs  state.rs  store.rs  supply_chain.rs  tenant.rs  tenant_config.rs  validate.rs  (+1 more)
src/adapters/: component_v0_5_0_to_v0_6_0.rs  mod.rs
src/cbor/: canonical.rs
src/messaging/: rendering.rs  universal_dto.rs
src/pack/extensions/: component_manifests.rs  component_sources.rs  mod.rs
src/schemas/: mod.rs
src/schemas/component/: mod.rs
src/schemas/component/v0_5_0/: mod.rs  qa.rs
src/schemas/component/v0_6_0/: describe.rs  mod.rs  qa.rs
src/schemas/pack/: mod.rs
src/schemas/pack/v0_6_0/: describe.rs  mod.rs  qa.rs  validation.rs
src/telemetry/: keys.rs  mod.rs  span_context.rs
tests/: component_qa_adapter_v0_5_0.rs  distributor_pack_status.rs  distributor_roundtrip.rs  distributor_secret_requirements.rs  events_envelope_roundtrip.rs  events_provider_descriptor.rs  flow_helpers.rs  flow_resolve.rs  flow_resolve_summary.rs  messaging_envelope_roundtrip.rs  pack_component_manifest_index.rs  pack_component_sources.rs  pack_manifest_extensions.rs  pack_manifest_roundtrip.rs  pack_manifest_secrets.rs  pack_spec_roundtrip.rs  pack_validation_components.rs  property_tests.rs  provider.rs  provider_install_record.rs  rendering_dtos.rs  schema.rs  schema_fixtures_v0_6_0.rs  secret_key.rs  serde_roundtrip.rs  store_models_roundtrip.rs  supply_chain_roundtrip.rs  ui_documents_roundtrip.rs  universal_dto_roundtrip.rs  validation_report.rs  worker_roundtrip.rs
tests/fixtures/: manifest_no_ext.json  manifest_with_provider_ext.json  manifest_with_unknown_ext.json  pack_manifest_with_bootstrap.yaml  pack_manifest_with_secret_requirements.json  pack_manifest_without_bootstrap.yaml  pack_manifest_without_secrets.json  pack_status_response_v2_with_secret_requirements.json  pack_status_response_v2_without_secret_requirements.json  resolve_component_response_with_secret_requirements.json  resolve_component_response_without_secret_requirements.json
