[package]
name = "greentic-types"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-types"
readme = "README.md"
description = "Shared primitives for Greentic: TenantCtx, InvocationEnvelope, NodeError, ids."
keywords = ["greentic","tenant","ctx","envelope","wasm"]
categories = ["data-structures","config"]

[features]
default = ["std","serde"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
time = "0.3"
