[package]
name = "greentic-types"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-types"
readme = "README.md"
description = "Shared primitives for Greentic: TenantCtx, InvocationEnvelope, NodeError, ids."
keywords = ["greentic","tenant","ctx","envelope","wasm"]
categories = ["data-structures","config"]

[features]
default = ["std", "serde", "time"]
std = []
serde = ["dep:serde", "dep:serde_with"]
time = ["dep:time"]
uuid = ["dep:uuid"]
schemars = ["dep:schemars", "serde"]

[dependencies]
schemars = { version = "0.8", features = ["derive"], optional = true }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", default-features = false, features = ["macros", "base64"], optional = true }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[dev-dependencies]
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.4"
